--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
               <!-- knowledge list -->
               <ul class="art-knowledge-list p-15-0">
                 <!-- list item -->
-                <li>Good Team Player</li>
+                <li>Team Player</li>
                 <!-- list item -->
                 <li>Quick Learner</li>
                 <!-- list item -->
