--- a/index.html
+++ b/index.html
@@ -1074,6 +1074,7 @@
                     <div class="swiper-container art-testimonial-slider" style="overflow: visible">
                       <!-- slider wrapper -->
                       <div class="swiper-wrapper">
+
                         <!-- slide -->
                         <div class="swiper-slide">
 
@@ -1084,15 +1085,54 @@
                               target="_blank">
                               <div class="testimonial-body">
                                 <!-- photo -->
-                                <img class="art-testimonial-face" src="img/testimonials/buddhi.jpeg" alt="face">
+                                <img class="art-testimonial-face" src="img/testimonials/rajeev.jpeg" alt="face">
                                 <!-- name -->
-                                <h5>Buddhi Vikasitha</h5>
-                                <div class="art-el-suptitle mb-15">Senior Software Engineer at DocsWell</div>
+                                <h5>Rajeev Thennahewa</h5>
+                                <div class="art-el-suptitle mb-15">Associate Software Architect at CodeGen International
+                                </div>
                                 <!-- text -->
-                                <div class="mb-15">Nilanga is a great to work with, also with good communication and
-                                  researching skills.
-                                  We have worked in different projects and he absolutely delivered the skills of a good
-                                  partner.</div>
+                                <div class="mb-15">Nilanga started working with me as a Software Engineer in my team and
+                                  his role included software development, tesing,
+                                  and later expanded his role into providing support for the production applications.
+                                  Nilanga was very good at troubleshooting and
+                                  investigating issues. He is well organized, diligent, and a fast learner. All these
+                                  attributes were critical when he was working
+                                  in the rapid response team, which involves reaching out to a lot of people. He is a
+                                  highly focused person as well as analytical and can
+                                  add value to any team he is a part of. His energy to make things happen was contagious
+                                  and it helped the whole team.</div>
+                              </div>
+                            </a>
+                            <!-- testimonial body end -->
+                          </div>
+                          <!-- testimonial end -->
+
+                        </div>
+                        <!-- slide end -->
+
+                        <!-- slide -->
+                        <div class="swiper-slide">
+
+                          <!-- testimonial -->
+                          <div class="art-a art-testimonial">
+                            <!-- testimonial body -->
+                            <a href="https://www.linkedin.com/in/nilangavirajith/#:~:text=Recommendations,Recommendations"
+                              target="_blank">
+                              <div class="testimonial-body">
+                                <!-- photo -->
+                                <img class="art-testimonial-face" src="img/testimonials/saranga.jpeg" alt="face">
+                                <!-- name -->
+                                <h5>Saranga Ekanayaka</h5>
+                                <div class="art-el-suptitle mb-15">Associate Technical Lead at CodeGen International
+                                </div>
+                                <!-- text -->
+                                <div class="mb-15">Nilanga and I worked on the same team for about 2 and a half years
+                                  and it was a pleasure working with him.
+                                  He is very good at what he does. He knows his way around people, and does whatever it
+                                  takes to help his team and gets things done.
+                                  He makes sure that everyone is on the same page and focused on the main goal.
+                                  The collaboration between us was very smooth and his assistance definitely made a huge
+                                  impact on our team's success.</div>
                               </div>
                             </a>
                             <!-- testimonial body end -->
@@ -1128,6 +1168,40 @@
 
                         </div>
                         <!-- slide end -->
+
+                        <!-- slide -->
+                        <div class="swiper-slide">
+
+                          <!-- testimonial -->
+                          <div class="art-a art-testimonial">
+                            <!-- testimonial body -->
+                            <a href="https://www.linkedin.com/in/nilangavirajith/#:~:text=Recommendations,Recommendations"
+                              target="_blank">
+                              <div class="testimonial-body">
+                                <!-- photo -->
+                                <img class="art-testimonial-face" src="img/testimonials/buddhi.jpeg" alt="face">
+                                <!-- name -->
+                                <h5>Buddhi Vikasitha</h5>
+                                <div class="art-el-suptitle mb-15">Senior Software Engineer at DocsWell</div>
+                                <!-- text -->
+                                <div class="mb-15">Nilanga is a great to work with, also with good communication and
+                                  researching skills.
+                                  We have worked in different projects and he absolutely delivered the skills of a good
+                                  partner.</div>
+                              </div>
+                            </a>
+                            <!-- testimonial body end -->
+                          </div>
+                          <!-- testimonial end -->
+
+                        </div>
+                        <!-- slide end -->
+
+
+
+
+
+
 
                         <!-- slide -->
                         <div class="swiper-slide">
