Updated new role

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <!-- name -->
               <h5 class="art-name mb-10">Nilanga Virajith</h5>
               <!-- post -->
-              <div class="art-sm-text">FullStack Engineer <br>Technical Team Lead </div>
+              <div class="art-sm-text">Software Engineer <br>Technical Team Lead </div>
             </div>
             <!-- info bar header end -->
 
@@ -85,13 +85,13 @@
                 <ul>
                   <!-- country -->
                   <li>
-                    <h6>Location</h6><span>Colombo, Sri Lanka</span>
+                    <h6>Location</h6><span>Singapore</span>
                   </li>
                   <li>
                     <h6>Email</h6><span>nilangavirajith5@gmail.com</span>
                   </li>
                   <li>
-                    <h6>Phone</h6><span>+94 71 290 7285</span>
+                    <h6>Phone</h6><span>+65 8598 2327</span>
                   </li>
                 </ul>
               </div>
@@ -445,15 +445,37 @@
                         <div class="art-a art-timeline-content">
                           <div class="art-card-header">
                             <div class="art-left-side">
-                              <h5>Associate Technical Lead</h5>
-                              <div class="art-el-suptitle mb-15"><a href="https://syscolabs.lk/" target="_blank">Sysco
-                                  LABS</a></div>
+                              <h5>Software Engineer</h5>
+                              <div class="art-el-suptitle mb-15"><a href="https://syscolabs.lk/" target="_blank">GIC, Singapore</a></div>
                             </div>
                             <div class="art-right-side">
-                              <span class="art-date">Aug 2021 - Present</span>
+                              <span class="art-date">Feb 2023 - Present</span>
                             </div>
                           </div>
-                          <p>Designing & Implementing scalable software solutions, and leading development team
+                          <p>Designing & Implementing microservices, unit testing, and integration testing.
+                          </p>
+                          <div class="art-el-suptitle mb-15">Kotlin | SpringBoot | PostgreSql | MS Sql Server | JOOQ | Jobrunr | Veracode | Docker | Kubernetes</div>
+
+                        </div>
+                      </div>
+
+                      <div class="art-timeline-item">
+                        <div class="art-timeline-mark-light"></div>
+                        <div class="art-timeline-mark"></div>
+
+
+                        <div class="art-a art-timeline-content">
+                          <div class="art-card-header">
+                            <div class="art-left-side">
+                              <h5>Associate Technical Lead</h5>
+                              <div class="art-el-suptitle mb-15"><a href="https://syscolabs.lk/" target="_blank">Sysco
+                                  LABS, Sri Lanka</a></div>
+                            </div>
+                            <div class="art-right-side">
+                              <span class="art-date">Aug 2021 - Feb 2023</span>
+                            </div>
+                          </div>
+                          <p>Designed & Implemented scalable software solutions, and led the development team
                           </p>
                           <div class="art-el-suptitle mb-15">AWS | React | Redux | Redux-Saga | Node.js | Express.js |
                             Serverless |
@@ -472,7 +494,7 @@
                             <div class="art-left-side">
                               <h5>Senior Software Engineer</h5>
                               <div class="art-el-suptitle mb-15"><a href="https://syscolabs.lk/" target="_blank">Sysco
-                                  LABS</a></div>
+                                  LABS, Sri Lanka</a></div>
                             </div>
                             <div class="art-right-side">
                               <span class="art-date">July 2020 - Aug 2021</span>
@@ -540,7 +562,7 @@
                             <div class="art-left-side">
                               <h5>Senior Software Engineer</h5>
                               <div class="art-el-suptitle mb-15"><a href="https://codegen.co.uk/"
-                                  target="_blank">CodeGen International</a></div>
+                                  target="_blank">CodeGen International, Sri Lanka</a></div>
                             </div>
                             <div class="art-right-side">
                               <span class="art-date">Feb 2020 - July 2020</span>
@@ -607,7 +629,7 @@
                             <div class="art-left-side">
                               <h5>Software Engineer</h5>
                               <div class="art-el-suptitle mb-15"><a href="https://codegen.co.uk/"
-                                  target="_blank">CodeGen International</a></div>
+                                  target="_blank">CodeGen International, Sri Lanka</a></div>
                             </div>
                             <div class="art-right-side">
                               <span class="art-date">Jan 2018 - Jan 2020</span>
@@ -674,7 +696,7 @@
                             <div class="art-left-side">
                               <h5>Software Engineer | Intern</h5>
                               <div class="art-el-suptitle mb-15"><a href="https://www.virtusa.com/"
-                                  target="_blank">Virtusa</a></div>
+                                  target="_blank">Virtusa, Sri Lanka</a></div>
                             </div>
                             <div class="art-right-side">
                               <span class="art-date">July 2016 - Jan 2017</span>
