Few more updates

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                           <!-- suptitle -->
                           <div class="art-lg-text art-code mb-25">&lt;<i>code</i>&gt; I <span class="txt-rotate"
                               data-period="2000"
-                              data-rotate='[ "build web applications", "design scalable systems", "provide technical coaching" ]'></span>&lt;/<i>code</i>&gt;
+                              data-rotate='[ "build web applications", "design scalable systems", "set up CI/CD", "lead dev teams" ]'></span>&lt;/<i>code</i>&gt;
                           </div>
 
                         </div>
