--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <!-- name -->
               <h5 class="art-name mb-10">Nilanga Virajith</h5>
               <!-- post -->
-              <div class="art-sm-text">Software Engineer <!--<br>Technical Team Lead--> </div>
+              <div class="art-sm-text">Senior Software Developer <!--<br>Technical Team Lead--> </div>
             </div>
             <!-- info bar header end -->
 
@@ -462,15 +462,15 @@
                           <div class="art-card-header">
                             <div class="art-left-side">
                               <h5>Software Engineer</h5>
-                              <div class="art-el-suptitle mb-15"><a href="https://syscolabs.lk/" target="_blank">GIC, Singapore</a></div>
+                              <div class="art-el-suptitle mb-15"><a href="https://www.gic.com.sg/" target="_blank">Government of Singapore Investment Corporation, Singapore</a></div>
                             </div>
                             <div class="art-right-side">
                               <span class="art-date">Feb 2023 - Present</span>
                             </div>
                           </div>
-                          <p>Designing & Implementing microservices, unit testing, and integration testing.
+                          <p>Designing & Implementing microservices unit testing, and integration testing.
                           </p>
-                          <div class="art-el-suptitle mb-15">Kotlin | SpringBoot | PostgreSql | MS Sql Server | JOOQ | Jobrunr | Veracode | Docker | Kubernetes</div>
+                          <div class="art-el-suptitle mb-15">Kotlin | SpringBoot | PostgreSql | MS Sql Server | JOOQ | Jobrunr | Redis | Docker | Kotest</div>
 
                         </div>
                       </div>
