--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
                         <div class="art-a art-timeline-content">
                           <div class="art-card-header">
                             <div class="art-left-side">
-                              <h5>Software Engineer</h5>
+                              <h5>Senior Software Developer</h5>
                               <div class="art-el-suptitle mb-15"><a href="https://www.gic.com.sg/" target="_blank">Government of Singapore Investment Corporation, Singapore</a></div>
                             </div>
                             <div class="art-right-side">
